# pydepot

./: .gitignore  README.md  mkdocs.yml  noxfile.py  pyproject.toml
docs/: index.md  installation.md  quickstart.md
docs/api/: action.md  reducer.md  store.md  subscriber.md
docs/css/: extra.css
src/pydepot/: __init__.py  store.py
src/pydepot/abc/: __init__.py  action.py  reducer.py  subscriber.py
tests/: helpers.py  test_store.py
